left align transcript to fix

--- a/less/azure.less
+++ b/less/azure.less
@@ -41,6 +41,10 @@
     }
 }
 
+.azure-transcript-container {
+    text-align: left;
+}
+
 .azure-inline-transcript-body-container {
     margin-top: 10px;
     display: none;
